--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Shashank-G-M/Perturbative_Trotter_Error/blob/main/tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "source": [
         "## Installation of Packages\n",
         "Restart session and rerun the cell after installation to avoid numpy/scipy import errors"
@@ -552,8 +562,8 @@
         "id": "PeMAOPwpmPnu"
       },
       "source": [
-        "## Calculate exact and approximate perturbative Trotter error $(\\varepsilon_2,\n",
-        " \\varepsilon_{\\text{app}})$\n",
+        "## Calculate exact and approximate perturbative Trotter error $(ε_2,\n",
+        " ε_{\\text{app}})$\n",
         "\n",
         " Assumes you have generated and stored relevant fragments and eigenstates using the above code blocks"
       ]
@@ -1254,7 +1264,8 @@
         "mdQWV4WPAICN",
         "AzvUhxl8_dIN",
         "ySpyjiN1_kbO"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
