Fix markdown errors

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -562,8 +562,7 @@
         "id": "PeMAOPwpmPnu"
       },
       "source": [
-        "## Calculate exact and approximate perturbative Trotter error $(ε_2,\n",
-        " ε_{\\text{app}})$\n",
+        "## Calculate exact and approximate perturbative Trotter error (ε$_2$, ε$_{\\text{app}}$)\n",
         "\n",
         " Assumes you have generated and stored relevant fragments and eigenstates using the above code blocks"
       ]
