Fix markdown errors

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -735,7 +735,7 @@
       "source": [
         "## Working with Trotter Unitary\n",
         "\n",
-        "Generate U_trotter and get the effective Hamiltonian from it by applying matrix logarithm. This cell also calculates all other relevant quantities concerning U_trotter and $\\hat{H}_{\\text{eff}}$ such as, $\\alpha_e$ (see Eq. (10) in paper),$\\ \\varepsilon,\\ E_0,\\ E_0^{T},\\ \\Delta E_T,\\ $and time step $t$ or ($dt$). \\\n",
+        "Generate U_trotter and get the effective Hamiltonian from it by applying matrix logarithm. This cell also calculates all other relevant quantities concerning U_trotter and $\\hat{H}_{\\text{eff}}$ such as, $\\alpha_e$ (see Eq. (10) in paper),$\\ \\varepsilon,\\ E_0,\\ E_0^{T},\\ \\Delta E_T,\\ $and time step $t$ (or $dt$). \\\n",
         "_Caution: For large molecules and qubit based methods, this step could take a while._"
       ]
     },
