Added feature to generate directories on the fly

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -3,8 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/Shashank-G-M/Perturbative_Trotter_Error/blob/main/tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -176,22 +175,28 @@
         "r = 1\n",
         "mol_name = 'lih'                                                                #Can be 'h2', 'beh2', 'h2o', and 'nh3'.\n",
         "\n",
+        "# #To work with N2, uncomment the following lines\n",
+        "# factor = 1.9                                      #The bond stretch factor. Should be one of 1.9, 2.0, 2.1, 2.2, 2.3\n",
+        "# r = 1.098*factor\n",
+        "# mol_name = 'n2_' + str(factor)\n",
+        "\n",
         "if mol_name == 'nh3' and r == 1.9:\n",
         "  with open('data/mol_data/nh3_mol_data.pkl', 'rb') as in_file:\n",
         "    mol_data = pickle.load(in_file)\n",
         "  H = mol_data['FermionOperator']\n",
         "  num_elecs = mol_data['num_elecs']\n",
-        "  n_qubits = count_qubits(H)\n",
-        "  H_const, H_obt, H_tbt = get_chem_tensors(H)\n",
-        "  H_obt_op, H_tbt_op = obt2op(H_obt), tbt2op(H_tbt)\n",
-        "  Hchem = H_obt_op + H_tbt_op + H_const\n",
+        "elif mol_name[:2] == 'n2':\n",
+        "    with open(savepath + 'mol_data/' + mol_name + '_mol_data.pkl', 'rb') as in_file:\n",
+        "      mol_data = pickle.load(in_file)\n",
+        "    H = mol_data['FermionOperator']\n",
+        "    num_elecs = mol_data['num_elecs']\n",
         "else:\n",
         "  H, num_elecs = obtain_OF_hamiltonian(mol_name, geometry=r)\n",
-        "  n_qubits = count_qubits(H)\n",
-        "  print (num_elecs, n_qubits)\n",
-        "  H_const, H_obt, H_tbt = get_chem_tensors(H)\n",
-        "  H_obt_op, H_tbt_op = obt2op(H_obt), tbt2op(H_tbt)\n",
-        "  Hchem = H_obt_op + H_tbt_op + H_const\n",
+        "\n",
+        "n_qubits = count_qubits(H)\n",
+        "H_const, H_obt, H_tbt = get_chem_tensors(H)\n",
+        "H_obt_op, H_tbt_op = obt2op(H_obt), tbt2op(H_tbt)\n",
+        "Hchem = H_obt_op + H_tbt_op + H_const\n",
         "\n",
         "config.mol_name = mol_name\n",
         "config.n_qubits = n_qubits\n",
@@ -213,9 +218,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### For non-tapered Hamiltonians\n",
+        "### For non-tapered qubit Hamiltonians\n",
         "\n",
-        "Use this for smaller molecules i.e. all but NH$_3$. Note, diagonalization can be slow on colab, so switch to a personal computer for faster execution."
+        "Use this for smaller molecules i.e. all but NH$_3$ and N$_2$."
       ],
       "metadata": {
         "id": "OIDFjVl5knFg"
@@ -225,12 +230,13 @@
       "cell_type": "code",
       "source": [
         "# Generating the exact eigenstates\n",
-        "JW_OF_Array_sparse = qubit_operator_sparse(JW_OF)\n",
-        "JW_OF_Array = JW_OF_Array_sparse.toarray()\n",
-        "v, w = sp.linalg.eigh(JW_OF_Array)\n",
-        "v0 = v[0]\n",
-        "w0 = w[:,[0]]\n",
-        "w0_sparse = sp.sparse.csc_matrix(w[:,[0]])\n",
+        "JW_OF_sarray = qubit_operator_sparse(JW_OF)\n",
+        "JW_OF_Array = JW_OF_sarray.toarray()\n",
+        "v0, w0 = eigsh(np.real(JW_OF_sarray), k = 1, which='SA', return_eigenvectors=True)\n",
+        "w0_sparse = sp.sparse.csc_matrix(w0)\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "# Generating the CISD approximated eigenstates\n",
         "proj_H, all_excitations = get_CI_proj_ham(JW_OF_Array, n_excitations = 2, ret_excitations = True, num_elecs = num_elecs, n_qubits = n_qubits)\n",
@@ -249,23 +255,28 @@
         "  if np.round(overlap) == 0:\n",
         "    print ('Index of ground state of H with S^2 = 0: ', i)\n",
         "    break\n",
+        "gs = CISD_evecs_full_space[:,[i]]\n",
+        "\n",
         "CISD_evecs_full_space[i], CISD_evecs_full_space[0] = CISD_evecs_full_space[0], CISD_evecs_full_space[i]\n",
         "CISD_evals[i], CISD_evals[0] = CISD_evals[0], CISD_evals[i]\n",
         "w0_sparse_CISD = sp.sparse.csc_matrix(CISD_evecs_full_space[:,[0]])\n",
         "\n",
         "print ('My CISD gs energy: ', CISD_evals[0])\n",
         "\n",
-        "gs = CISD_evecs_full_space[:,[0]]\n",
         "\n",
         "\n",
         "\n",
         "#Saving the states in appropriate directory.\n",
         "os.makedirs(f'data/JW_OF/{mol_name}', exist_ok=True)          #Make directory if not present already\n",
         "\n",
-        "with open('data/JW_OF/'+ mol_name + '/'+ mol_name + '_v', 'wb') as out_file:\n",
-        "  pickle.dump(v, out_file)\n",
-        "with open('data/JW_OF/'+ mol_name + '/'+ mol_name + '_w', 'wb') as out_file:\n",
-        "  pickle.dump(w, out_file)\n",
+        "# with open('data/JW_OF/'+ mol_name + '/'+ mol_name + '_v', 'wb') as out_file:        #Use if complete spectrum was calculated\n",
+        "#   pickle.dump(v, out_file)\n",
+        "with open('data/JW_OF/'+ mol_name + '/'+ mol_name + '_v0', 'wb') as out_file:\n",
+        "  pickle.dump(v0, out_file)\n",
+        "# with open('data/JW_OF/'+ mol_name + '/'+ mol_name + '_w', 'wb') as out_file:        #Use if all eigstates were calculated\n",
+        "#   pickle.dump(w, out_file)\n",
+        "with open('data/JW_OF/'+ mol_name + '/'+ mol_name + '_w0_sparse', 'wb') as out_file:\n",
+        "  pickle.dump(w0_sparse, out_file)\n",
         "with open('data/JW_OF/'+ mol_name + '/'+ mol_name + '_CISD_evals', 'wb') as out_file:\n",
         "  pickle.dump(CISD_evals, out_file)\n",
         "with open('data/JW_OF/'+ mol_name + '/'+ mol_name + '_CISD_evecs', 'wb') as out_file:\n",
@@ -282,9 +293,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### For tapered Hamiltonians\n",
+        "### For tapered qubit Hamiltonians\n",
         "\n",
-        "Can be used for larger molecules. To reproduce the results for qubit based fragments of NH$_3$, use this method. The method can of course be used for smaller molecules as well."
+        "Use for larger molecules (NH$_3$ and N$_2$). Though the method will work for smaller molecules as well."
       ],
       "metadata": {
         "id": "mriltbl1l5Pt"
@@ -295,17 +306,15 @@
       "source": [
         "load_ham = False                      # Set it to True when you have already saved the tapered Hamiltonian\n",
         "save_ham = True                      # Set it to True when you want to save the tapered Hamiltonian\n",
-        "GPU = False                           # Experimental.\n",
         "\n",
         "\n",
         "#Make directory if not present already\n",
         "os.makedirs(savepath + 'tapered_JW_OF/' + mol_name, exist_ok=True)\n",
         "\n",
         "if load_ham == True:\n",
-        "  savepath = 'data/'\n",
         "  with open(savepath + 'tapered_JW_OF/' + mol_name + '/' + mol_name + '_ham_ndarray', 'rb') as in_file:\n",
         "    tapered_JW_OF_array = pickle.load(in_file)\n",
-        "  # tapered_JW_OF_sarray = sp.sparse.csc_matrix(tapered_JW_OF_array)\n",
+        "  tapered_JW_OF_sarray = sp.sparse.csc_matrix(tapered_JW_OF_array)\n",
         "  ref_det = '1'*num_elecs + '0'*(n_qubits-num_elecs)\n",
         "else:\n",
         "  ref_det = '1'*num_elecs + '0'*(n_qubits-num_elecs)\n",
@@ -313,20 +322,9 @@
         "  tapered_JW_OF_sarray = get_sparse_operator(tapered_JW_OF, n_qubits-2)\n",
         "  tapered_JW_OF_array = np.real(tapered_JW_OF_sarray).toarray()\n",
         "  if save_ham == True:\n",
-        "    savepath = 'data/'\n",
         "    with open(savepath + 'tapered_JW_OF/' + mol_name + '/' + mol_name + '_ham_ndarray', 'wb') as out_file:\n",
         "      pickle.dump(tapered_JW_OF_array, out_file)\n",
         "\n",
-        "\n",
-        "if GPU == True:\n",
-        "  tapered_JW_OF_cparray = cp.asarray(tapered_JW_OF_array)\n",
-        "  tap_v_cp, tap_w_cp = cp.linalg.eigh(tapered_JW_OF_cparray)\n",
-        "  tap_v = cp.asnumpy(tap_v_cp)\n",
-        "  tap_w = cp.asnumpy(tap_w_cp)\n",
-        "else:\n",
-        "  tap_v, tap_w = np.linalg.eigh(tapered_JW_OF_array)\n",
-        "\n",
-        "tap_w0_sparse = sp.sparse.csc_matrix(tap_w[:,[0]])\n",
         "\n",
         "\n",
         "\n",
@@ -334,22 +332,23 @@
         "\n",
         "\n",
         "tapered_JW_OF_sarray = sp.sparse.csc_matrix(tapered_JW_OF_array)\n",
-        "tapered_CI_states = get_tapered_CI_states(ref_det, [0,1,2], preserve_Sz=False)\n",
+        "tapered_CI_states = get_tapered_CI_states(ref_det, [0, 1, 2], preserve_Sz=True)\n",
         "CIproj_tap_JW_OF_sarray = tapered_CI_states.T*tapered_JW_OF_sarray*tapered_CI_states\n",
         "\n",
-        "CIproj_tap_v0 = eigsh(CIproj_tap_JW_OF_sarray, k = 1, which='SA', return_eigenvectors=False)\n",
-        "tap_v0 = eigsh(tapered_JW_OF_sarray, k = 1, which='SA', return_eigenvectors=False)\n",
-        "\n",
+        "CIproj_tap_v0 = eigsh(CIproj_tap_JW_OF_sarray, k = 1, tol=1e-6, which='SA', return_eigenvectors=False)\n",
+        "tap_v0, tap_w0 = eigsh(tapered_JW_OF_sarray, k = 1, tol=1e-6, which='SA', return_eigenvectors=True)\n",
+        "tap_w0_sparse = sp.sparse.csc_matrix(tap_w0)\n",
         "\n",
         "tap_CISD_evals, tap_CISD_evecs = np.linalg.eigh(CIproj_tap_JW_OF_sarray.toarray())\n",
         "tap_CISD_evecs_full_space = tapered_CI_states*tap_CISD_evecs\n",
         "\n",
         "\n",
-        "with open(savepath + 'tapered_JW_OF/' + mol_name + '/' + mol_name + '_tap_v', 'wb') as in_file:\n",
-        "  pickle.dump(tap_v, in_file)\n",
         "\n",
-        "dump_ndarray_h5(savepath + 'tapered_JW_OF/' + mol_name + '/' + mol_name + '_tap_w.h5', tap_w)\n",
+        "with open(savepath + 'tapered_JW_OF/' + mol_name + '/' + mol_name + '_tap_v0', 'wb') as in_file:\n",
+        "  pickle.dump(tap_v0, in_file)\n",
         "\n",
+        "with open(savepath + 'tapered_JW_OF/' + mol_name + '/' + mol_name + '_tap_w0_sparse', 'wb') as in_file:\n",
+        "  pickle.dump(tap_w0_sparse, in_file)\n",
         "\n",
         "with open(savepath + 'tapered_JW_OF/' + mol_name + '/' + mol_name + '_tap_CISD_evals', 'wb') as in_file:\n",
         "  pickle.dump(tap_CISD_evals, in_file)\n",
@@ -397,7 +396,7 @@
         "        counter += 1\n",
         "non_cisd_dim = counter\n",
         "\n",
-        "Ssq_evals, NSz2SSq_Proj = Ssq_v[:counter], Ssq_w[:, :counter].T\n",
+        "z, NSz2SSq_Proj = Ssq_v[:counter], Ssq_w[:, :counter].T\n",
         "NSz2SSq_Proj_sparse = sp.sparse.csc_matrix(NSz2SSq_Proj)\n",
         "\n",
         "\n",
@@ -457,7 +456,12 @@
         "H_NSz_CISD_full_space_w = np.vstack((H_NSz_CISD_w, correct_zeros))\n",
         "#CISD approx to Hamiltonian eigenstates projected onto number of electrons = num_elecs, Sz = 0, and S^2 = 0 subspace\n",
         "H_NSzSsq_CISD_full_space_w = NSz2SSq_Proj@H_NSz_CISD_full_space_w\n",
-        "H_NSzSsq_CISD_full_space_w0_sparse = sp.sparse.csc_matrix(H_NSzSsq_CISD_full_space_w[:,[0]])\n",
+        "for i in range (len(H_NSz_CISD_v)):\n",
+        "  temp = sp.sparse.csc_matrix(H_NSzSsq_CISD_full_space_w[:,[i]])\n",
+        "  if np.abs(sym_w0_sparse.T*temp).toarray()[0,0]**2 > 0.15:\n",
+        "    H_NSzSsq_CISD_full_space_w0_sparse = sp.sparse.csc_matrix(H_NSzSsq_CISD_full_space_w[:,[i]])\n",
+        "    print ('Index of right CISD approx to ground state = ', i)\n",
+        "    break\n",
         "\n",
         "#CISD approximated eigenstates which do not have S^2 = 0 will be columns of H_NSzSsq_CISD_full_space_w with ~ 0 everywhere."
       ]
@@ -480,7 +484,7 @@
       },
       "source": [
         "### Non tapered\n",
-        "For large systems (Ex: NH$_3$), uncomment the last line to store the data as a hdf5 file instad of a pickle dump."
+        "Use when generating qubit fragments of non-tapered (small) Hamiltonian or fermoinic fragments of any Hamiltonian. For fermionic fragments of large systems (Ex: NH$_3$ and N$_2$), uncomment the last line to store the data as a hdf5 file instad of a pickle dump."
       ]
     },
     {
@@ -494,7 +498,7 @@
       "source": [
         "save, load, spacial = True, True, True\n",
         "\n",
-        "method = 'lr'\n",
+        "method = 'qwcsi'\n",
         "\n",
         "#Saving the data in appropriate directory.\n",
         "sarray_savepath = savepath + method + '/sparse arrays/'\n",
@@ -585,8 +589,10 @@
       "outputs": [],
       "source": [
         "method = 'lr'\n",
+        "\n",
         "sarray_savepath = savepath + method + '/sparse arrays/'\n",
         "\n",
+        "print (f\"Method: {method}\\n\")\n",
         "\n",
         "try:\n",
         "  fragments_list_sarray = list(load_h5_list_of_sparse(sarray_savepath + 'Full space/' + mol_name + '_sarray.h5'))\n",
@@ -628,42 +634,41 @@
       },
       "outputs": [],
       "source": [
-        "method = 'qwclf'\n",
-        "mol_name = 'lih'\n",
-        "istapered = True                       # Setting this to True assumes you have generated and saved the tapered data for the current molecule\n",
+        "# method = 'qwclf'\n",
+        "# mol_name = 'lih'\n",
         "\n",
+        "# Setting this to True assumes you have generated and saved the tapered data for the current molecule\n",
+        "# Mostly useful for NH3 and N2.\n",
+        "istapered = False\n",
         "\n",
+        "print (f\"Method: {method}\\n\")\n",
         "if istapered == True:\n",
         "  sarray_savepath = savepath + 'tapered_' + method + '/sparse arrays/'\n",
         "  fragments_list_sarray = load_h5_list_of_sparse(sarray_savepath + 'Full space/' + mol_name + '_sarray.h5')\n",
         "\n",
-        "  with open(savepath + 'tapered_JW_OF/' + mol_name + '/' + mol_name + '_tap_v', 'rb') as in_file:\n",
-        "    v = pickle.load(in_file)\n",
-        "  w = load_h5_ndarray(savepath + 'tapered_JW_OF/' + mol_name + '/' + mol_name + '_tap_w.h5')\n",
-        "  w0_sparse = sp.sparse.csc_matrix(w[:,[0]])\n",
-        "\n",
-        "  with open(savepath + 'tapered_JW_OF/' + mol_name + '/' + mol_name + '_tap_CISD_evals', 'rb') as in_file:\n",
-        "    CISD_v = pickle.load(in_file)\n",
+        "  with open(savepath + 'tapered_JW_OF/' + mol_name + '/' + mol_name + '_tap_w0_sparse', 'rb') as in_file:\n",
+        "    w0_sparse = pickle.load(in_file)\n",
         "  with open(savepath + 'tapered_JW_OF/' + mol_name + '/' + mol_name + '_tap_CISD_evecs_full_space', 'rb') as in_file:\n",
         "    CISD_w = pickle.load(in_file)\n",
-        "  CISD_w0_sparse = sp.sparse.csc_matrix(CISD_w[:,[0]])\n",
+        "  for i in range (len(CISD_w[0, :])):\n",
+        "    temp_vec = sp.sparse.csc_matrix(CISD_w[:, [i]])\n",
+        "    if np.abs(temp_vec.T*w0_sparse).toarray()[0,0]**2 > 0.15:\n",
+        "      CISD_w0_sparse = copy(temp_vec)\n",
+        "      print ('Index of right CISD approx to ground state = ', i, '\\n')\n",
+        "      break\n",
+        "\n",
         "else:\n",
         "  sarray_savepath = savepath + method + '/sparse arrays/'\n",
         "  with open(sarray_savepath + 'Full space/' + mol_name + '_sarray.pkl', 'rb') as in_file:\n",
         "    fragments_list_sarray = pickle.load(in_file)\n",
         "\n",
-        "  with open(savepath + 'JW_OF/' + mol_name + '/' + mol_name + '_v', 'rb') as in_file:\n",
-        "    v = pickle.load(in_file)\n",
-        "\n",
         "  try:\n",
         "    w = load_h5_ndarray(savepath + 'JW_OF/' + mol_name + '/' + mol_name + '_w.h5')\n",
+        "    w0_sparse = sp.sparse.csc_matrix(w[:,[0]])\n",
         "  except FileNotFoundError:\n",
-        "    with open(savepath + 'JW_OF/' + mol_name + '/' + mol_name + '_w', 'rb') as in_file:\n",
-        "      w = pickle.load(in_file)\n",
-        "  w0_sparse = sp.sparse.csc_matrix(w[:,[0]])\n",
+        "    with open(savepath + 'JW_OF/' + mol_name + '/' + mol_name + '_w0_sparse', 'rb') as in_file:\n",
+        "      w0_sparse = pickle.load(in_file)\n",
         "\n",
-        "  with open(savepath + 'JW_OF/' + mol_name + '/' + mol_name + '_CISD_evals', 'rb') as in_file:\n",
-        "    CISD_v = pickle.load(in_file)\n",
         "  with open(savepath + 'JW_OF/' + mol_name + '/' + mol_name + '_CISD_evecs_full_space', 'rb') as in_file:\n",
         "    CISD_w = pickle.load(in_file)\n",
         "  CISD_w0_sparse = sp.sparse.csc_matrix(CISD_w[:,[0]])\n",
@@ -697,9 +702,9 @@
         "# # import cupyx.scipy.sparse as cusparse\n",
         "# # from cupyx.scipy.sparse.linalg import eigsh as gpu_eigsh\n",
         "\n",
-        "method = 'lr'\n",
-        "mol_name = 'lih'\n",
-        "istapered = False\n",
+        "# method = 'lr'\n",
+        "# mol_name = 'lih'\n",
+        "istapered = False                                             #Change to True if the fragments are tapred. Mostly useful for NH3 and N2.\n",
         "\n",
         "sarray_savepath = savepath + method + '/sparse arrays/'\n",
         "\n",
@@ -742,9 +747,9 @@
     {
       "cell_type": "code",
       "source": [
-        "method = 'lr'\n",
-        "mol_name = 'lih'\n",
-        "istapered = False\n",
+        "# method = 'lr'\n",
+        "# mol_name = 'lih'\n",
+        "istapered = False                 #Change to True if the fragments are tapred. Mostly useful for NH3 and N2.\n",
         "\n",
         "if istapered == True:\n",
         "  try:\n",
@@ -1016,7 +1021,7 @@
       },
       "source": [
         "## T gate counts\n",
-        "Calculate upperbound on T gates needed to reach chemical accuracy in obtaining ground state energy of molecular Hamiltonians under QPE + Trotter approximation algorithm for various Hamiltonian fragmentation techniques."
+        "Calculate upperbound on T gates needed to reach chemical accuracy in obtaining ground state energy of molecular Hamiltonians under QPE + Trotter approximation algorithm for various Hamiltonian fragmentation techniques. Note that due to non-linear optimization, values could change from run to run."
       ]
     },
     {
@@ -1259,12 +1264,25 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
+        "Vr-MimX0yfrq",
+        "ft-1GKd0FLxM",
+        "0d25a255",
+        "k0gcB_iAVrG0",
+        "OIDFjVl5knFg",
+        "mriltbl1l5Pt",
+        "lvXddtgk74Qh",
+        "PDLiESzhoGR2",
+        "25fIR6NgoIhp",
+        "PeMAOPwpmPnu",
+        "cNjCIfKFvY6e",
+        "AweGzufBvjJ0",
+        "O9WDZJIfkfqZ",
+        "6-OvwBjNo10u",
         "DwaNvGpPnWII",
         "mdQWV4WPAICN",
         "AzvUhxl8_dIN",
         "ySpyjiN1_kbO"
-      ],
-      "include_colab_link": true
+      ]
     },
     "kernelspec": {
       "display_name": "Python 3",
