Update instructions and comments for using N2

--- a/tutorial.ipynb
+++ b/tutorial.ipynb
@@ -159,7 +159,7 @@
       "source": [
         "## Build molecular Hamiltonian\n",
         "\n",
-        "All molecules except NH$_3$ are generated on the fly. NH$_3$ Hamiltonian, however, is loaded from the repository. To reproduce the results from the paper, use ```r=1``` for H$_2$, LiH, and BeH$_2$, and ```r=1.9``` for H$_2$O and NH$_3$.\n",
+        "All molecules except NH$_3$ and N$_2$ are generated on the fly. NH$_3$ and N$_2$ Hamiltonians, however, are loaded from the repository. To reproduce the results from the paper, use ```r=1``` for H$_2$, LiH, and BeH$_2$, and ```r=1.9``` for H$_2$O and NH$_3$. Use stretch factor between ```1.9``` and ```2.3``` in increment of 0.1 for N$_2$.\n",
         "\n",
         "We demonstrate the usage for the case of LiH."
       ]
@@ -1268,9 +1268,11 @@
         "ft-1GKd0FLxM",
         "0d25a255",
         "k0gcB_iAVrG0",
+        "RNYMbVaFkjdM",
         "OIDFjVl5knFg",
         "mriltbl1l5Pt",
         "lvXddtgk74Qh",
+        "xFw8vk0gfw7P",
         "PDLiESzhoGR2",
         "25fIR6NgoIhp",
         "PeMAOPwpmPnu",
